[package]
name = "english-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inquire = "*"
clearscreen = "*"
serde_json = "*"
serde = { version = "*", features = ["derive"] }
lazy_static = "*"
spin = "*"
rand = "*"
